# php-src-kos

./: README.md
ext/libxml/: libxml.c
kos/examples/fpm/: CMakeLists.txt  README.md
kos/examples/fpm/einit/: CMakeLists.txt
kos/examples/fpm/einit/src/: init.yaml.in  security.psl
kos/examples/web_server/: CMakeLists.txt  README.md
kos/examples/web_server/einit/: CMakeLists.txt
kos/examples/web_server/einit/src/: init.yaml.in  security.psl
kos/examples/web_server/netinit/: CMakeLists.txt
kos/php/: CMakeLists.txt  cmake_uninstall.cmake.in
kos/php/fpm/: CMakeLists.txt  Fpm.psl
kos/php/fpm/libraries/: CMakeLists.txt
kos/php/fpm/libraries/TSRM/: CMakeLists.txt
kos/php/fpm/libraries/Zend/: CMakeLists.txt
kos/php/fpm/libraries/ext/: CMakeLists.txt
kos/php/fpm/libraries/ext/ctype/: CMakeLists.txt
kos/php/fpm/libraries/ext/date/: CMakeLists.txt
kos/php/fpm/libraries/ext/dom/: CMakeLists.txt
kos/php/fpm/libraries/ext/fileinfo/: CMakeLists.txt
kos/php/fpm/libraries/ext/filter/: CMakeLists.txt
kos/php/fpm/libraries/ext/hash/: CMakeLists.txt
kos/php/fpm/libraries/ext/iconv/: CMakeLists.txt
kos/php/fpm/libraries/ext/json/: CMakeLists.txt
kos/php/fpm/libraries/ext/libxml/: CMakeLists.txt
kos/php/fpm/libraries/ext/openssl/: CMakeLists.txt
kos/php/fpm/libraries/ext/pcre/: CMakeLists.txt
kos/php/fpm/libraries/ext/pdo/: CMakeLists.txt
kos/php/fpm/libraries/ext/pdo_sqlite/: CMakeLists.txt
kos/php/fpm/libraries/ext/phar/: CMakeLists.txt
kos/php/fpm/libraries/ext/posix/: CMakeLists.txt
kos/php/fpm/libraries/ext/random/: CMakeLists.txt
kos/php/fpm/libraries/ext/reflection/: CMakeLists.txt
kos/php/fpm/libraries/ext/session/: CMakeLists.txt
kos/php/fpm/libraries/ext/simplexml/: CMakeLists.txt
kos/php/fpm/libraries/ext/spl/: CMakeLists.txt
kos/php/fpm/libraries/ext/sqlite3/: CMakeLists.txt
kos/php/fpm/libraries/ext/standard/: CMakeLists.txt
kos/php/fpm/libraries/ext/tokenizer/: CMakeLists.txt
kos/php/fpm/libraries/ext/xml/: CMakeLists.txt
kos/php/fpm/libraries/ext/xmlreader/: CMakeLists.txt
kos/php/fpm/libraries/ext/xmlwriter/: CMakeLists.txt
kos/php/fpm/libraries/main/: CMakeLists.txt
kos/php/fpm/libraries/main/streams/: CMakeLists.txt
kos/tests/: .gitignore  CMakeLists.txt
kos/tests/client/: CMakeLists.txt
kos/tests/einit/: CMakeLists.txt
kos/tests/einit/src/: init.yaml.in  security.psl
kos/tests/server/: CMakeLists.txt
kos/tests/server/src/: main.c
